feat: add page structure with text

--- a/singolo1.html
+++ b/singolo1.html
@@ -6,5 +6,109 @@
     <link rel="stylesheet" href="singolo1.css">
   </head>
   <body>
+    <header>
+      <h1 class="logo">
+          SINGOLO
+          <span class="logo__item">
+              *
+          </span>
+      </h1>
+      <nav>
+          <ul>
+              <li>
+                  HOME
+              </li>
+              <li>
+                  SERVICES
+              </li>
+              <li>
+                  PORTFOLIO
+              </li>
+              <li>
+                  ABOUT
+              </li>
+              <li>
+                  CONTACT
+              </li>
+          </ul>
+      </nav>
+    </header>
+    <div class="line__header"></div>
+    <main>
+      <section class="slider">
+      </section>
+      <section class="services">
+        <h1 class="services__header">
+          Our Services
+        </h1>
+        <p class="services__description">
+          Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat
+          porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+        </p>
+        <ul class="services__list">
+          <li class="services__item">
+            <spam class="service__name">
+              Custom Design
+            </spam>
+            <span class="service__description">
+              Curabitur vestibulum eget mauris quis
+              laoreet. Phasellus in quam laoreet, viverra
+              lacus ut, ultrices velit.
+            </span>
+          </li>
+          <li class="services__item">
+            <spam class="service__name">
+              Inovative Ideas
+            </spam>
+            <span class="service__description">
+              Quisque luctus, quam eget molestie
+              commodo, lacus purus cursus purus, nec
+              rutrum tellus dolor id lorem.
+            </span>
+          </li>
+          <li class="services__item">
+            <spam class="service__name">
+              Love Is The Answer
+            </spam>
+            <span class="service__description">
+              Nulla sed nunc et tortor luctus faucibus.
+              Morbi at aliquet turpis, et consequat felis.
+              Quisque condimentum.
+            </span>
+          </li>
+          <li class="services__item">
+            <spam class="service__name">
+              Responsive Layout
+            </spam>
+            <span class="service__description">
+              Sed porttitor placerat rhoncus. In at nunc
+              tellus. Maecenas blandit nunc ligula.
+              Praesent elit leo.
+            </span>
+          </li>
+          <li class="services__item">
+            <spam class="service__name">
+              24 / 7 Support
+            </spam>
+            <span class="service__description">
+              Vivamus vel quam lacinia, tincidunt dui
+              non, vehicula nisi. Nulla a sem erat.
+              Pellentesque egestas venenatis lorem .
+            </span>
+          </li>
+          <li class="services__item">
+            <spam class="service__name">
+              Feel Like A Star
+            </spam>
+            <span class="service__description">
+              Quisque hendrerit purus dapibus, ornare
+              nibh vitae, viverra nibh. Fusce vitae
+              aliquam tellus.
+            </span>
+          </li>
+        </ul>
+      </section>
+      <div class="line-bottom"></div>
+    </main>
   </body>
-  </html>
+</html>
