--- a/singolo1.html
+++ b/singolo1.html
@@ -8,24 +8,33 @@
   <body>
     <header>
       <h1 class="logo">
-          SINGOLO
-          <span class="logo__item">
-              *
-          </span>
+          SINGOLO<span class="logo__item">*</span>
       </h1>
       <nav>
           <ul>
               <li>
                   HOME
               </li>
+              <li class="nav__dota">
+
+              </li>
               <li>
                   SERVICES
+              </li>
+              <li class="nav__dota">
+
               </li>
               <li>
                   PORTFOLIO
               </li>
+              <li class="nav__dota">
+
+              </li>
               <li>
                   ABOUT
+              </li>
+              <li class="nav__dota">
+
               </li>
               <li>
                   CONTACT
@@ -33,23 +42,27 @@
           </ul>
       </nav>
     </header>
-    <div class="line__header"></div>
+    <div class="line-header"></div>
     <main>
-      <section class="slider">
-      </section>
+      <div class="slider">
+        <a class="slider__btn slider__btn_back"></a>
+        <a class="slider__btn slider__btn_next"></a>
+      </div>
+      <div class="line-slider"></div>
       <section class="services">
-        <h1 class="services__header">
+        <h2 class="services__header">
           Our Services
-        </h1>
+        </h2>
         <p class="services__description">
           Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat
           porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
         </p>
         <ul class="services__list">
           <li class="services__item">
-            <spam class="service__name">
+            <img class="services__icon" src="assets/pen.png" alt="pen">
+            <span class="service__name">
               Custom Design
-            </spam>
+            </span>
             <span class="service__description">
               Curabitur vestibulum eget mauris quis
               laoreet. Phasellus in quam laoreet, viverra
@@ -57,9 +70,10 @@
             </span>
           </li>
           <li class="services__item">
-            <spam class="service__name">
+            <img class="services__icon" src="assets/bulb.png" alt="bulb">
+            <span class="service__name">
               Inovative Ideas
-            </spam>
+            </span>
             <span class="service__description">
               Quisque luctus, quam eget molestie
               commodo, lacus purus cursus purus, nec
@@ -67,9 +81,10 @@
             </span>
           </li>
           <li class="services__item">
-            <spam class="service__name">
+            <img class="services__icon" src="assets/heart.png" alt="heart">
+            <span class="service__name">
               Love Is The Answer
-            </spam>
+            </span>
             <span class="service__description">
               Nulla sed nunc et tortor luctus faucibus.
               Morbi at aliquet turpis, et consequat felis.
@@ -77,9 +92,10 @@
             </span>
           </li>
           <li class="services__item">
-            <spam class="service__name">
+            <img class="services__icon" src="assets/phone.png" alt="phone">
+            <span class="service__name">
               Responsive Layout
-            </spam>
+            </span>
             <span class="service__description">
               Sed porttitor placerat rhoncus. In at nunc
               tellus. Maecenas blandit nunc ligula.
@@ -87,9 +103,10 @@
             </span>
           </li>
           <li class="services__item">
-            <spam class="service__name">
+            <img class="services__icon" src="assets/bubble.png" alt="bubble">
+            <span class="service__name">
               24 / 7 Support
-            </spam>
+            </span>
             <span class="service__description">
               Vivamus vel quam lacinia, tincidunt dui
               non, vehicula nisi. Nulla a sem erat.
@@ -97,9 +114,10 @@
             </span>
           </li>
           <li class="services__item">
-            <spam class="service__name">
+            <img class="services__icon" src="assets/star.png" alt="star">
+            <span class="service__name">
               Feel Like A Star
-            </spam>
+            </span>
             <span class="service__description">
               Quisque hendrerit purus dapibus, ornare
               nibh vitae, viverra nibh. Fusce vitae
@@ -108,7 +126,7 @@
           </li>
         </ul>
       </section>
-      <div class="line-bottom"></div>
     </main>
+    <div class="line-bottom"></div>
   </body>
 </html>
