fix: add logo as picture, remove font

--- a/singolo1.html
+++ b/singolo1.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <h1 class="logo">
-          SINGOLO<span class="logo__item">*</span>
+          <img class="logo__icon" src="assets/SINGOLO.png" alt="logo">
       </h1>
       <nav>
           <ul>
@@ -16,25 +16,21 @@
                   HOME
               </li>
               <li class="nav__dota">
-
               </li>
               <li>
                   SERVICES
               </li>
               <li class="nav__dota">
-
               </li>
               <li>
                   PORTFOLIO
               </li>
               <li class="nav__dota">
-
               </li>
               <li>
                   ABOUT
               </li>
               <li class="nav__dota">
-
               </li>
               <li>
                   CONTACT
@@ -63,6 +59,7 @@
             <span class="service__name">
               Custom Design
             </span>
+            <br>
             <span class="service__description">
               Curabitur vestibulum eget mauris quis
               laoreet. Phasellus in quam laoreet, viverra
@@ -74,6 +71,7 @@
             <span class="service__name">
               Inovative Ideas
             </span>
+            <br>
             <span class="service__description">
               Quisque luctus, quam eget molestie
               commodo, lacus purus cursus purus, nec
@@ -85,6 +83,7 @@
             <span class="service__name">
               Love Is The Answer
             </span>
+            <br>
             <span class="service__description">
               Nulla sed nunc et tortor luctus faucibus.
               Morbi at aliquet turpis, et consequat felis.
@@ -96,6 +95,7 @@
             <span class="service__name">
               Responsive Layout
             </span>
+            <br>
             <span class="service__description">
               Sed porttitor placerat rhoncus. In at nunc
               tellus. Maecenas blandit nunc ligula.
@@ -107,6 +107,7 @@
             <span class="service__name">
               24 / 7 Support
             </span>
+            <br>
             <span class="service__description">
               Vivamus vel quam lacinia, tincidunt dui
               non, vehicula nisi. Nulla a sem erat.
@@ -118,6 +119,7 @@
             <span class="service__name">
               Feel Like A Star
             </span>
+            <br>
             <span class="service__description">
               Quisque hendrerit purus dapibus, ornare
               nibh vitae, viverra nibh. Fusce vitae
