feat: add style, change page title

--- a/singolo1.html
+++ b/singolo1.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>SINGOLO#1</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="singolo1.css">
   </head>
   <body>
     <header>
       <h1 class="logo">
-          <img class="logo__icon" src="assets/SINGOLO.png" alt="logo">
+          SINGOLO
       </h1>
+      <img class="logo-icon" src="assets/SINGOLO.png" alt="logo">
       <nav>
           <ul>
               <li>
@@ -55,75 +57,87 @@
         </p>
         <ul class="services__list">
           <li class="services__item">
-            <img class="services__icon" src="assets/pen.png" alt="pen">
-            <span class="service__name">
-              Custom Design
-            </span>
-            <br>
-            <span class="service__description">
-              Curabitur vestibulum eget mauris quis
-              laoreet. Phasellus in quam laoreet, viverra
-              lacus ut, ultrices velit.
+            <img class="service__icon" src="assets/pen.png" alt="pen">
+            <span>
+              <span class="service__name">
+                Custom Design
+              </span>
+              <br>
+              <span class="service__description">
+                Curabitur vestibulum eget mauris quis
+                laoreet. Phasellus in quam laoreet, viverra
+                lacus ut, ultrices velit.
+              </span>
             </span>
           </li>
           <li class="services__item">
-            <img class="services__icon" src="assets/bulb.png" alt="bulb">
-            <span class="service__name">
+            <img class="service__icon" src="assets/bulb.png" alt="bulb">
+            <span>
+              <span class="service__name">
               Inovative Ideas
-            </span>
-            <br>
-            <span class="service__description">
-              Quisque luctus, quam eget molestie
-              commodo, lacus purus cursus purus, nec
-              rutrum tellus dolor id lorem.
-            </span>
-          </li>
-          <li class="services__item">
-            <img class="services__icon" src="assets/heart.png" alt="heart">
-            <span class="service__name">
-              Love Is The Answer
-            </span>
-            <br>
-            <span class="service__description">
-              Nulla sed nunc et tortor luctus faucibus.
-              Morbi at aliquet turpis, et consequat felis.
-              Quisque condimentum.
+              </span>
+              <br>
+              <span class="service__description">
+                Quisque luctus, quam eget molestie
+                commodo, lacus purus cursus purus, nec
+                rutrum tellus dolor id lorem.
+              </span>
             </span>
           </li>
           <li class="services__item">
-            <img class="services__icon" src="assets/phone.png" alt="phone">
-            <span class="service__name">
-              Responsive Layout
-            </span>
-            <br>
-            <span class="service__description">
-              Sed porttitor placerat rhoncus. In at nunc
-              tellus. Maecenas blandit nunc ligula.
-              Praesent elit leo.
-            </span>
-          </li>
-          <li class="services__item">
-            <img class="services__icon" src="assets/bubble.png" alt="bubble">
-            <span class="service__name">
-              24 / 7 Support
-            </span>
-            <br>
-            <span class="service__description">
-              Vivamus vel quam lacinia, tincidunt dui
-              non, vehicula nisi. Nulla a sem erat.
-              Pellentesque egestas venenatis lorem .
+            <img class="service__icon" src="assets/heart.png" alt="heart">
+            <span>
+              <span class="service__name">
+                Love Is The Answer
+              </span>
+              <br>
+              <span class="service__description">
+                Nulla sed nunc et tortor luctus faucibus.
+                Morbi at aliquet turpis, et consequat felis.
+                Quisque condimentum.
+              </span>
             </span>
           </li>
           <li class="services__item">
-            <img class="services__icon" src="assets/star.png" alt="star">
-            <span class="service__name">
-              Feel Like A Star
+            <img class="service__icon" src="assets/phone.png" alt="phone">
+            <span>
+              <span class="service__name">
+                Responsive Layout
+              </span>
+              <br>
+              <span class="service__description">
+                Sed porttitor placerat rhoncus. In at nunc
+                tellus. Maecenas blandit nunc ligula.
+                Praesent elit leo.
+              </span>
             </span>
-            <br>
-            <span class="service__description">
-              Quisque hendrerit purus dapibus, ornare
-              nibh vitae, viverra nibh. Fusce vitae
-              aliquam tellus.
+          </li>
+          <li class="services__item">
+            <img class="service__icon" src="assets/bubble.png" alt="bubble">
+            <span>
+              <span class="service__name">
+                24 / 7 Support
+              </span>
+              <br>
+              <span class="service__description">
+                Vivamus vel quam lacinia, tincidunt dui
+                non, vehicula nisi. Nulla a sem erat.
+                Pellentesque egestas venenatis lorem .
+              </span>
+            </span>
+          </li>
+          <li class="services__item">
+            <img class="service__icon" src="assets/star.png" alt="star">
+            <span>
+              <span class="service__name">
+                Feel Like A Star
+              </span>
+              <br>
+              <span class="service__description">
+                Quisque hendrerit purus dapibus, ornare
+                nibh vitae, viverra nibh. Fusce vitae
+                aliquam tellus.
+              </span>
             </span>
           </li>
         </ul>
