--- a/singolo2.html
+++ b/singolo2.html
@@ -7,5 +7,75 @@
     <link rel="stylesheet" href="singolo2.css">
   </head>
   <body>
+    <section class="portfolio">
+      <h2 class="portfolio__name">
+        Portfolio
+      </h2>
+      <p class="portfolio__description">
+        Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+      </p>
+      <ul class="portfolio__nav">
+        <li class="portfolio__nav-item">
+          All
+        </li>
+        <li class="portfolio__nav-item">
+          Web Design
+        </li>
+        <li class="portfolio__nav-item">
+          Graphic Design
+        </li>
+        <li class="portfolio__nav-item">
+          Artwork
+        </li>
+      </ul>
+      <ul class="portfolio__gallery">
+        <li class="portfolio__image">
+          <img src="assets/portfolio/project_1.jpg" alt="project">
+        </li>
+        <li class="portfolio__image">
+          <img src="assets/portfolio/project_2.jpg" alt="project">
+        </li>
+        <li class="portfolio__image">
+          <img src="assets/portfolio/project_3.jpg" alt="project">
+        </li>
+        <li class="portfolio__image">
+          <img src="assets/portfolio/project_4.jpg" alt="project">
+        </li>
+        <li class="portfolio__image">
+          <img src="assets/portfolio/project_5.jpg" alt="project">
+        </li>
+        <li class="portfolio__image">
+          <img src="assets/portfolio/project_6.jpg" alt="project">
+        </li>
+        <li class="portfolio__image">
+          <img src="assets/portfolio/project_7.jpg" alt="project">
+        </li>
+        <li class="portfolio__image">
+          <img src="assets/portfolio/project_8.jpg" alt="project">
+        </li>
+        <li class="portfolio__image">
+          <img src="assets/portfolio/project_9.jpg" alt="project">
+        </li>
+        <li class="portfolio__image">
+          <img src="assets/portfolio/project_10.jpg" alt="project">
+        </li>
+        <li class="portfolio__image">
+          <img src="assets/portfolio/project_11.jpg" alt="project">
+        </li>
+        <li class="portfolio__image">
+          <img src="assets/portfolio/project_12.jpg" alt="project">
+        </li>
+        <li class="portfolio__image">
+          <img src="assets/portfolio/project_10.jpg" alt="project">
+        </li>
+        <li class="portfolio__image">
+          <img src="assets/portfolio/project_11.jpg" alt="project">
+        </li>
+        <li class="portfolio__image">
+          <img src="assets/portfolio/project_12.jpg" alt="project">
+        </li>
+      </ul>
+    </section>
+    <div class="portfolio-line"></div>
   </body>
 </html>
