feat: add resume section

--- a/singolo2.html
+++ b/singolo2.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <section class="portfolio">
-      <h2 class="portfolio__name">
+      <h2 class="portfolio__title">
         Portfolio
       </h2>
       <p class="portfolio__description">
@@ -77,5 +77,87 @@
       </ul>
     </section>
     <div class="portfolio-line"></div>
+    <section class="resume">
+      <h2 class="resume__title">
+        About Us
+      </h2>
+      <p class="resume__description">
+        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis,
+        non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+      </p>
+      <ul class="resume__list">
+        <li class="resume__item">
+          <img class="resume__employee-photos" src="assets/about_us/photo1.png" alt="employee">
+          <p class="resume__employee-name">
+            Adam Jensen
+          </p>
+          <p class="resume__employeee-description">
+            Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.
+          </p>
+          <p class="resume__communication">
+            <a href="">
+              <img class="resume__social-icon" src="assets/social_icon/facebook.png" alt="facebook">
+            </a>
+            <a href="">
+              <img class="resume__social-icon" src="assets/social_icon/google+.png" alt="google">
+            </a>
+            <a href="">
+              <img class="resume__social-icon" src="assets/social_icon/twitter.png" alt="twitter">
+            </a>
+            <a href="">
+              <img class="resume__social-icon" src="assets/social_icon/linkedin.png" alt="linkedin">
+            </a>
+          </p>
+        </li>
+        <li class="resume__item">
+          <img class="resume__employee-photos" src="assets/about_us/photo2.png" alt="employee">
+          <p class="resume__employee-name">
+            Desmond Miles
+          </p>
+          <p class="resume__employeee-description">
+            Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.
+          </p>
+          <p class="resume__communication">
+            <a href="">
+              <img class="resume__social-icon" src="assets/social_icon/facebook.png" alt="facebook">
+            </a>
+            <a href="">
+              <img class="resume__social-icon" src="assets/social_icon/google+.png" alt="google">
+            </a>
+            <a href="">
+              <img class="resume__social-icon" src="assets/social_icon/twitter.png" alt="twitter">
+            </a>
+            <a href="">
+              <img class="resume__social-icon" src="assets/social_icon/linkedin.png" alt="linkedin">
+            </a>
+          </p>
+        </li>
+        <li class="resume__item">
+          <img class="resume__employee-photos" src="assets/about_us/photo3.png" alt="employee">
+          <p class="resume__employee-name">
+            Scolara Visari
+          </p>
+          <p class="resume__employeee-description">
+            Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
+          </p>
+          <p class="resume__communication">
+            <a href="">
+              <img class="resume__social-icon" src="assets/social_icon/facebook.png" alt="facebook">
+            </a>
+            <a href="">
+              <img class="resume__social-icon" src="assets/social_icon/google+.png" alt="google">
+            </a>
+            <a href="">
+              <img class="resume__social-icon" src="assets/social_icon/twitter.png" alt="twitter">
+            </a>
+            <a href="">
+              <img class="resume__social-icon" src="assets/social_icon/linkedin.png" alt="linkedin">
+            </a>
+          </p>
+        </li>
+      </ul>
+    </section>
+    <div class="resume-line"></div>
   </body>
 </html>
