feat: add style resume section

--- a/singolo2.html
+++ b/singolo2.html
@@ -29,49 +29,49 @@
         </li>
       </ul>
       <ul class="portfolio__gallery">
-        <li class="portfolio__image">
+        <li class="portfolio__img">
           <img src="assets/portfolio/project_1.jpg" alt="project">
         </li>
-        <li class="portfolio__image">
+        <li class="portfolio__img">
           <img src="assets/portfolio/project_2.jpg" alt="project">
         </li>
-        <li class="portfolio__image">
+        <li class="portfolio__img">
           <img src="assets/portfolio/project_3.jpg" alt="project">
         </li>
-        <li class="portfolio__image">
+        <li class="portfolio__img">
           <img src="assets/portfolio/project_4.jpg" alt="project">
         </li>
-        <li class="portfolio__image">
+        <li class="portfolio__img">
           <img src="assets/portfolio/project_5.jpg" alt="project">
         </li>
-        <li class="portfolio__image">
+        <li class="portfolio__img">
           <img src="assets/portfolio/project_6.jpg" alt="project">
         </li>
-        <li class="portfolio__image">
+        <li class="portfolio__img">
           <img src="assets/portfolio/project_7.jpg" alt="project">
         </li>
-        <li class="portfolio__image">
+        <li class="portfolio__img">
           <img src="assets/portfolio/project_8.jpg" alt="project">
         </li>
-        <li class="portfolio__image">
+        <li class="portfolio__img">
           <img src="assets/portfolio/project_9.jpg" alt="project">
         </li>
-        <li class="portfolio__image">
+        <li class="portfolio__img">
           <img src="assets/portfolio/project_10.jpg" alt="project">
         </li>
-        <li class="portfolio__image">
+        <li class="portfolio__img">
           <img src="assets/portfolio/project_11.jpg" alt="project">
         </li>
-        <li class="portfolio__image">
+        <li class="portfolio__img">
           <img src="assets/portfolio/project_12.jpg" alt="project">
         </li>
-        <li class="portfolio__image">
+        <li class="portfolio__img">
           <img src="assets/portfolio/project_10.jpg" alt="project">
         </li>
-        <li class="portfolio__image">
+        <li class="portfolio__img">
           <img src="assets/portfolio/project_11.jpg" alt="project">
         </li>
-        <li class="portfolio__image">
+        <li class="portfolio__img">
           <img src="assets/portfolio/project_12.jpg" alt="project">
         </li>
       </ul>
@@ -88,7 +88,7 @@
       </p>
       <ul class="resume__list">
         <li class="resume__item">
-          <img class="resume__employee-photos" src="assets/about_us/photo1.png" alt="employee">
+          <img class="resume__employee-photo" src="assets/about_us/photo1.jpg" alt="employee">
           <p class="resume__employee-name">
             Adam Jensen
           </p>
@@ -111,7 +111,7 @@
           </p>
         </li>
         <li class="resume__item">
-          <img class="resume__employee-photos" src="assets/about_us/photo2.png" alt="employee">
+          <img class="resume__employee-photo" src="assets/about_us/photo2.jpg" alt="employee">
           <p class="resume__employee-name">
             Desmond Miles
           </p>
@@ -134,7 +134,7 @@
           </p>
         </li>
         <li class="resume__item">
-          <img class="resume__employee-photos" src="assets/about_us/photo3.png" alt="employee">
+          <img class="resume__employee-photo" src="assets/about_us/photo3.jpg" alt="employee">
           <p class="resume__employee-name">
             Scolara Visari
           </p>
