init: start singolo part2

--- a/singolo2.html
+++ b/singolo2.html
@@ -2,149 +2,11 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>SINGOLO</title>
+    <title>SINGOLO#2</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="singolo1.css">
     <link rel="stylesheet" href="singolo2.css">
   </head>
   <body>
-    <header>
-      <h1 class="logo">
-          SINGOLO
-      </h1>
-      <img class="logo-icon" src="assets/SINGOLO.png" alt="logo">
-      <nav>
-          <ul>
-              <li>
-                  HOME
-              </li>
-              <li class="nav__dota">
-              </li>
-              <li>
-                  SERVICES
-              </li>
-              <li class="nav__dota">
-              </li>
-              <li>
-                  PORTFOLIO
-              </li>
-              <li class="nav__dota">
-              </li>
-              <li>
-                  ABOUT
-              </li>
-              <li class="nav__dota">
-              </li>
-              <li>
-                  CONTACT
-              </li>
-          </ul>
-      </nav>
-    </header>
-    <div class="line-header"></div>
-    <main>
-      <div class="slider">
-        <a class="slider__btn slider__btn_back"></a>
-        <a class="slider__btn slider__btn_next"></a>
-      </div>
-      <div class="line-slider"></div>
-      <section class="services">
-        <h2 class="services__header">
-          Our Services
-        </h2>
-        <p class="services__description">
-          Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat
-          porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
-        </p>
-        <ul class="services__list">
-          <li class="services__item">
-            <img class="service__icon" src="assets/pen.png" alt="pen">
-            <span>
-              <span class="service__name">
-                Custom Design
-              </span>
-              <br>
-              <span class="service__description">
-                Curabitur vestibulum eget mauris quis
-                laoreet. Phasellus in quam laoreet, viverra
-                lacus ut, ultrices velit.
-              </span>
-            </span>
-          </li>
-          <li class="services__item">
-            <img class="service__icon" src="assets/bulb.png" alt="bulb">
-            <span>
-              <span class="service__name">
-              Inovative Ideas
-              </span>
-              <br>
-              <span class="service__description">
-                Quisque luctus, quam eget molestie
-                commodo, lacus purus cursus purus, nec
-                rutrum tellus dolor id lorem.
-              </span>
-            </span>
-          </li>
-          <li class="services__item">
-            <img class="service__icon" src="assets/heart.png" alt="heart">
-            <span>
-              <span class="service__name">
-                Love Is The Answer
-              </span>
-              <br>
-              <span class="service__description">
-                Nulla sed nunc et tortor luctus faucibus.
-                Morbi at aliquet turpis, et consequat felis.
-                Quisque condimentum.
-              </span>
-            </span>
-          </li>
-          <li class="services__item">
-            <img class="service__icon" src="assets/phone.png" alt="phone">
-            <span>
-              <span class="service__name">
-                Responsive Layout
-              </span>
-              <br>
-              <span class="service__description">
-                Sed porttitor placerat rhoncus. In at nunc
-                tellus. Maecenas blandit nunc ligula.
-                Praesent elit leo.
-              </span>
-            </span>
-          </li>
-          <li class="services__item">
-            <img class="service__icon" src="assets/bubble.png" alt="bubble">
-            <span>
-              <span class="service__name">
-                24 / 7 Support
-              </span>
-              <br>
-              <span class="service__description">
-                Vivamus vel quam lacinia, tincidunt dui
-                non, vehicula nisi. Nulla a sem erat.
-                Pellentesque egestas venenatis lorem .
-              </span>
-            </span>
-          </li>
-          <li class="services__item">
-            <img class="service__icon" src="assets/star.png" alt="star">
-            <span>
-              <span class="service__name">
-                Feel Like A Star
-              </span>
-              <br>
-              <span class="service__description">
-                Quisque hendrerit purus dapibus, ornare
-                nibh vitae, viverra nibh. Fusce vitae
-                aliquam tellus.
-              </span>
-            </span>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <div class="line-bottom"></div>
     <section class="portfolio">
       <h2 class="portfolio__title">
         Portfolio
