feat: add slider

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
       <div class="slider">
         <a class="slider__btn slider__btn_back"></a>
         <a class="slider__btn slider__btn_next"></a>
+        <a class="btn btn_mobile1"></a>
+        <a class="btn btn_mobile2"></a>
+        <a class="btn btn_mobile3 btn_hiden"></a>
       </div>
       <div class="line-slider"></div>
       <section class="services" id="service">
@@ -164,16 +167,16 @@
       </p>
       <ul class="portfolio__nav">
         <li class="portfolio__nav-item">
-          All
+          <a class="focus">All</a>
         </li>
         <li class="portfolio__nav-item">
-          Web Design
+          <a>Web Design</a>
         </li>
         <li class="portfolio__nav-item">
-          Graphic Design
+          <a>Graphic Design</a>
         </li>
         <li class="portfolio__nav-item">
-          Artwork
+          <a>Artwork</a>
         </li>
       </ul>
       <ul class="portfolio__gallery">
