feat: add mobile switch

--- a/index.html
+++ b/index.html
@@ -56,9 +56,18 @@
       <div class="slider">
         <a class="slider__btn slider__btn_back"></a>
         <a class="slider__btn slider__btn_next"></a>
-        <a class="btn btn_mobile1"></a>
-        <a class="btn btn_mobile2"></a>
-        <a class="btn btn_mobile3 btn_hiden"></a>
+        <a class="btn btn_mobile1">
+          <img class="btn__phone-screen" src="assets/phone/screen1.png">
+          <img class="btn__phone-dot" src="assets/phone/RedDot.png">
+        </a>
+        <a class="btn btn_mobile2">
+          <img class="btn__phone-screen" src="assets/phone/screen2.png">
+          <img class="btn__phone-dot" src="assets/phone/RedDot.png">
+        </a>
+        <a class="btn btn_mobile3">
+          <img class="btn__phone-screen" src="assets/phone/screen3.png">
+          <img class="btn__phone-dot" src="assets/phone/RedDot.png">
+        </a>
       </div>
       <div class="line-slider"></div>
       <section class="services" id="service">
